[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UI/base/TitleHBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/base/SectionContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/base/VolumeVBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/base/ToggleCheckBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/menu/SettingsMenuTab.gd" type="Script" id=6]
[ext_resource path="res://src/UI/menu/ControlSchemeHBox.tscn" type="PackedScene" id=7]

[node name="SettingsMenuTab" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
tab_type = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 992.0
margin_bottom = 568.0
custom_constants/separation = 16

[node name="TitleHBox" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_bottom = 40.0
text = "Settings"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 960.0
margin_bottom = 424.0
size_flags_vertical = 3

[node name="SectionsHBox" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 960.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/SectionsHBox"]
margin_right = 484.0
margin_bottom = 368.0
size_flags_horizontal = 3
custom_constants/separation = 24

[node name="GraphicsContainer" parent="VBoxContainer/ScrollContainer/SectionsHBox/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 484.0
margin_bottom = 96.0
text = "Graphics"

[node name="ToggleCheckBox" parent="VBoxContainer/ScrollContainer/SectionsHBox/VBoxContainer/GraphicsContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 142.0
margin_top = 56.0
margin_right = 342.0
margin_bottom = 96.0

[node name="InputContainer" parent="VBoxContainer/ScrollContainer/SectionsHBox/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 120.0
margin_right = 484.0
margin_bottom = 368.0
size_flags_vertical = 3
text = "Input"

[node name="ControlSchemeHBox" parent="VBoxContainer/ScrollContainer/SectionsHBox/VBoxContainer/InputContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 484.0
margin_bottom = 204.0

[node name="AudioContainer" parent="VBoxContainer/ScrollContainer/SectionsHBox" instance=ExtResource( 3 )]
margin_left = 488.0
margin_top = 0.0
margin_bottom = 368.0
size_flags_horizontal = 3
text = "Audio"

[node name="MasterVBox" parent="VBoxContainer/ScrollContainer/SectionsHBox/AudioContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 472.0
margin_bottom = 140.0
can_be_muted = true
volume_type = 0

[node name="MusicVBox" parent="VBoxContainer/ScrollContainer/SectionsHBox/AudioContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 156.0
margin_right = 472.0
margin_bottom = 196.0
can_be_muted = false
volume_type = 1

[node name="SFXVBox" parent="VBoxContainer/ScrollContainer/SectionsHBox/AudioContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 212.0
margin_right = 472.0
margin_bottom = 252.0
can_be_muted = false
volume_type = 2

[node name="AmbientSoundVBox" parent="VBoxContainer/ScrollContainer/SectionsHBox/AudioContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 268.0
margin_right = 472.0
margin_bottom = 308.0
can_be_muted = false
volume_type = 3

[node name="ResetButton" type="Button" parent="VBoxContainer"]
margin_left = 352.0
margin_top = 440.0
margin_right = 608.0
margin_bottom = 480.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 4
text = "Reset to Default"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_left = 416.0
margin_top = 496.0
margin_right = 544.0
margin_bottom = 536.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 4
text = "Back"
